--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="value_quota_office">00,00</string>
     <string name="value_quota_accommodation">00,00</string>
     <string name="value_quota_disclosure_parliamentary_activity">00,00</string>
+    <color name="white">#FFFFFF</color>
 
 </resources>
