--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="value_quota_accommodation">00,00</string>
     <string name="value_quota_disclosure_parliamentary_activity">00,00</string>
     <color name="white">#FFFFFF</color>
+    <string name="hint_search">Pesquisar</string>
 
 </resources>
