--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,4 +37,18 @@
     <string name="total_expenditure">0000,00</string>
     <string name="place">Lugar</string>
 
+<string-array name="month_names">
+    <item>Janeiro</item>
+    <item>Fevereiro</item>
+    <item>Março</item>
+    <item>Abril	</item>
+    <item>Maio</item>
+    <item>Junho</item>
+    <item>Jullho</item>
+    <item>Agosto</item>
+    <item>Setembro</item>
+    <item>Outubro</item>
+    <item>Novembro</item>
+    <item>Dezembro</item>
+</string-array>
 </resources>
