--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,7 +38,11 @@
     <string name="place">Lugar</string>
     <string name="follow">Seguir</string>
     <string name="followed">Seguido</string>
-
+    <string name="party">Partido</string>
+    <string name="layout_style_photo">imagem de fundo</string>
+    <string name="FedUnity">UF</string>
+    <string name="name">Nome</string>
+    
 <string-array name="month_names">
     <item>Janeiro</item>
     <item>Fevereiro</item>
