Refactoring Description screen nd adding graph structure.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,17 +21,17 @@
     <string name="ranking_position">100</string>
     <string name="image_description_photo">photo congressman</string>
     <string name="image_description_default">&quot;&quot;</string>
-    <string name="image_description_quota_telephony">quota of telephony</string>
-    <string name="image_description_quota_technical_work_and_consulting">quota of technical work and consulting</string>
-    <string name="image_description_quota_postal_service">quota of postal services</string>
-    <string name="image_description_quota_issuance_of_air_tickets">quota of issuance of air tickets</string>
-    <string name="image_description_quota_safety">quota of safety</string>
-    <string name="image_description_quota_alimentation">quota of alimentation</string>
-    <string name="image_description_quota_fuel">quota of fuel</string>
-    <string name="image_description_quota_air_freight">quota of air freight</string>
-    <string name="image_description_quota_office">quota of office</string>
-    <string name="image_description_quota_accommodation">quota of accommodation</string>
-    <string name="image_description_quota_disclosure_parliamentary_activity">quota of disclosure parliamentary activity</string>
+    <string name="image_description_quota_telephony">Telefonia</string>
+    <string name="image_description_quota_technical_work_and_consulting">Consultoria</string>
+    <string name="image_description_quota_postal_service">Serviços Postais</string>
+    <string name="image_description_quota_issuance_of_air_tickets">Bilhetes Aéreos</string>
+    <string name="image_description_quota_safety">Segurança</string>
+    <string name="image_description_quota_alimentation">Alimentação</string>
+    <string name="image_description_quota_fuel">Combustível</string>
+    <string name="image_description_quota_air_freight">Aeronaves</string>
+    <string name="image_description_quota_office">Material de Escritório</string>
+    <string name="image_description_quota_accommodation">Hospedagem</string>
+    <string name="image_description_quota_disclosure_parliamentary_activity">Divulgação</string>
     <string name="trace">-</string>
     <string name="monetary_symbol">R$ </string>
     <string name="total_expenditure">0000,00</string>
