--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Akan</string>
+
     <color name="white">#FFFFFF</color>
+
     <string name="hint_search">Pesquisar</string>
     <string name="congressman_name">nome</string>
     <string name="congressman_party">partido</string>
@@ -31,21 +34,27 @@
     <string name="layout_style_photo">imagem de fundo</string>
     <string name="name">Nome</string>
     <string name="congressman">Parlamentares</string>
+    <string name="configurations">Configuações</string>
     <string name="legend_text">Gastos médios dos Deputados</string>
     <string name="months">Meses</string>
     <string name="expenditure">Gastos(R$)</string>
-<string-array name="month_names">
-    <item>Janeiro</item>
-    <item>Fevereiro</item>
-    <item>Março</item>
-    <item>Abril	</item>
-    <item>Maio</item>
-    <item>Junho</item>
-    <item>Jullho</item>
-    <item>Agosto</item>
-    <item>Setembro</item>
-    <item>Outubro</item>
-    <item>Novembro</item>
-    <item>Dezembro</item>
-</string-array>
+
+    <string-array name="month_names">
+        <item>Janeiro</item>
+        <item>Fevereiro</item>
+        <item>Março</item>
+        <item>Abril	</item>
+        <item>Maio</item>
+        <item>Junho</item>
+        <item>Jullho</item>
+        <item>Agosto</item>
+        <item>Setembro</item>
+        <item>Outubro</item>
+        <item>Novembro</item>
+        <item>Dezembro</item>
+    </string-array>
+
+    <string name="title_activity_configurations">Configurations</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
