adding selector effect in some buttons

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -101,9 +101,9 @@
     <string name="pedro_costa">Pedro Costa \n pirlimpas@gmail.com</string>    
     <string name="arthur_Jahn">Arthur Jahn \n stutrzbecher@gmail.com </string>
     <string name="maxwell_almeida">Maxwell Almeida \n llewxam150@gmail.com </string>
-    <string name="tomaz_martins">Tomáz Martins \n stutrzbecher@gmail.com </string>
+    <string name="tomaz_martins">Tomáz Martins \n tomaz.r.martins@gmail.com </string>
     <string name="matheus_fonseca">Matheus Fonseca \n imatheusfonseca@gmail.com </string>
-    <string name="thaiane_braga">Thaiane Braga \n thaiane.braga@outlook.com </string>     
+    <string name="thaiane_braga">Thaiane Braga \n  thaianefbraga@gmail.com </string>     
     
 
 </resources>
