Adding Facebook api structure to the project

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -105,5 +105,6 @@
     <string name="matheus_fonseca">Matheus Fonseca\n1matheusfonseca@gmail.com </string>
     <string name="thaiane_braga">Thaiane Braga\nthaianefbraga@gmail.com </string>     
     
+    <string name="facebook_app_id">394663470723879</string>
 
 </resources>
